2002-06-24  Christopher Faylor  <cgf@redhat.com>

	* dtable.cc (dtable::find_unused_handle): Avoid coercion.

2002-06-24  Christopher Faylor  <cgf@redhat.com>

	* dtable.cc (fhandler_base::dup2): Cleanup.  Ensure that lock is turned
	off in error condition.

2002-06-24  Corinna Vinschen  <corinna@vinschen.de>

	* uinfo.cc (internal_getlogin): Set myself->uid and myself->gid instead
	of user.real_uid and user.real_gid.
	(uinfo_init): Evaluate orig_uid and real_uid from myself->uid.  Ditto
	for gid.

2002-06-23  Pierre Humblet <pierre.humblet@ieee.org>

	* security.cc (get_group_sidlist): Add pw argument and use pw->pw_name
	in call to get_supplementary_group_sidlist.
	(create_token): Add pw argument and use it in call to
	get_group_sidlist.
	* security.h: Add pw argument in declaration of create_token.
	* syscalls.cc (seteuid32): Add pw argument in call to create_token.

2002-06-23  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* fhandler.cc (fhandler_base::fstat): Set S_IFIFO for pipes.
	* fhandler_socket.cc (fhandler_socket.cc::fstat): Set S_IFSOCK.

2002-06-23  Christopher Faylor  <cgf@redhat.com>

	* lib/_cygwin_S_IEXEC.cc: Remove obsolete file.

2002-06-23  Christopher Faylor  <cgf@redhat.com>

	Use cygwin_{shm,ipc}.h instead of /sys/{shm,ipc}.h throughout.
	* sys/ipc.h: Remove.
	* sys/shm.h: Remove.
	* cygwin_ipc.h: New file.
	* cygwin_shm.h: New file.

2002-06-23  Christopher Faylor  <cgf@redhat.com>

	* cygwin.sc: Add recent changes from ld sources.

2002-06-23  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* winsup.h: Move #ifdef EXPCGF code into "winbase.h".
	* winbase.h: #ifdef EXPCGF code moved here from "winsup.h".

2002-06-12  Thomas Pfaff  <tpfaff@gmx.net>

	* thread.h (pthread::cleanup_stack): Renamed cleanup_handlers to
	cleanup_stack.
	* thread.cc (pthread::pthread): Ditto.
	(pthread::create): Fixed mutex verification.
	(pthread::push_cleanup_handler): Renamed cleanup_handlers to
	cleanup_stack.